--- a/web/src/style.css
+++ b/web/src/style.css
@@ -21,6 +21,9 @@ body {
 
 .app {
   height: 100vh;
+  row-gap: 14px;
+  display: flex !important;
+  flex-direction: column;
 }
 
 .tab-container {
@@ -31,6 +34,7 @@ body {
 }
 
 .chat-panel {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: stretch;
