--- a/web/src/style.css
+++ b/web/src/style.css
@@ -41,7 +41,7 @@ body {
   flex-grow: 2;
   height: 100%;
   overflow-x: auto;
-  padding: 10px;
+  padding: 10px !important;
 }
 
 .list-item {
@@ -50,4 +50,8 @@ body {
   gap: 10px;
   background-color: rgb(240, 240, 240);
   border-radius: 20px;
+}
+
+.list-item-pre {
+  white-space: pre-wrap !important;
 }
